# itmo-sem-2-prog

./: CMakeLists.txt  Polynom.cpp  Polynom.h  README.md
Working Directory/: cube.txt  data-20210322T085457-structure-20190416T084545.xml
src/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab4algo.cpp  lab4algo.h  lab5.cpp
src/lab6/: Color.cpp  Color.h  CubeManager.cpp  CubeManager.h  camera.cpp  camera.h  lab6gl.cpp
src/lib56/: files.cpp  files.h
src/lib56/xml/: XMLObject.cpp  XMLObject.h  XMLParser.cpp  XMLParser.h
